create game logic

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
-  
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
+<html>
 
-     </body>
+<head>
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  
+</head>
+<body>
+  <nav class = "clearfix">
+    <a class="title" href="#">Instructions</a>
+    <a class="title" href="#">Game</a>
 
+  </nav>
+  <h1>Memory Game</h1>
+  <h2> The game of wit, fun and laughter. Awesomely created by <a href="https://twitter.com/AdrianaBllack"> ME!</a></h2>
+  
+  
+  <h3>Instructions</h3>
+
+  <p> Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+
+  <h4> Get to know me more personally via <a href = "https://twitter.com/AdrianaBllack">Twitter<a/>, <a href = "https://www.facebook.com/profile.php?id=19904569">Facebook</a> and <a href = "https://uk.linkedin.com/in/adrianablanco">Linkedin</a>! </h4>
+
+  <div class = "board">
+    <div class = "card"></div>
+    <div class = "card"></div>
+    <div class = "card"></div>
+    <div class = "card"></div>
+  </div>
+<nav>
+  <footer>Created with &#10084 by <span class="name">Adriana</span></footer>
+</nav>
+
+<script src ="main.js"></script> 
+</body>
 
 </html>
