--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,11 +22,9 @@
 
   <h4> Get to know me more personally via <a href = "https://twitter.com/AdrianaBllack">Twitter<a/>, <a href = "https://www.facebook.com/profile.php?id=19904569">Facebook</a> and <a href = "https://uk.linkedin.com/in/adrianablanco">Linkedin</a>! </h4>
 
-  <div class = "board">
-    <div class = "card"></div>
-    <div class = "card"></div>
-    <div class = "card"></div>
-    <div class = "card"></div>
+  <div id="game-board" class ="board" >
+    
+    
   </div>
 <nav>
   <footer>Created with &#10084 by <span class="name">Adriana</span></footer>
